--- a/index.html
+++ b/index.html
@@ -59,6 +59,67 @@
         </div>
       </div>
     </nav>
+
+    <!-- Slider Section -->
+    <section id="slider">
+      <div class="container">
+        <div class="row">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active position-relative">
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="Cover - 1" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its
+                    layout.
+                  </p>
+                  <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="Cover - 2" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its
+                    layout.
+                  </p>
+                  <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="Cover - 4" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its
+                    layout.
+                  </p>
+                  <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
