--- a/index.html
+++ b/index.html
@@ -67,40 +67,52 @@
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-inner">
               <div class="carousel-item active position-relative">
-                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: 0.8">
+                </div>
                 <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="Cover - 1" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <h1 class="text-white">
+                    Get Started Digital Learning
+                  </h1>
                   <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its
-                    layout.
+                    It is a long established fact that a
+                    reader will be distracted by the
+                    readable content of a page when
+                    looking at its layout.
                   </p>
                   <a href="#" class="btn btn-primary btn-lg">Get Started</a>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: 0.8">
+                </div>
                 <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="Cover - 2" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <h1 class="text-white">
+                    Get Started Digital Learning
+                  </h1>
                   <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its
-                    layout.
+                    It is a long established fact that a
+                    reader will be distracted by the
+                    readable content of a page when
+                    looking at its layout.
                   </p>
                   <a href="#" class="btn btn-primary btn-lg">Get Started</a>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: .5;"></div>
+                <div class="bg-dark position-absolute w-100 h-100 top-0 lef-0 bg-dark" style="--bs-bg-opacity: 0.8">
+                </div>
                 <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="Cover - 4" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="text-white">Get Started Digital Learning</h1>
+                  <h1 class="text-white">
+                    Get Started Digital Learning
+                  </h1>
                   <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its
-                    layout.
+                    It is a long established fact that a
+                    reader will be distracted by the
+                    readable content of a page when
+                    looking at its layout.
                   </p>
                   <a href="#" class="btn btn-primary btn-lg">Get Started</a>
                 </div>
@@ -121,6 +133,125 @@
       </div>
     </section>
   </header>
+
+  <!-- Main Section -->
+  <main>
+    <!-- Course Section -->
+    <section id="course">
+      <div class="container">
+        <div class="row">
+          <div class="common-heading text-center py-5">
+            <h2 class="fw-semibold">Discover Our Popular Courses</h2>
+            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+            layout.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="Course - 1">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="Course - 2">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="Course - 3">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fullstack Web Development</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="Course - 4">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Digital Marketing</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="Photography Basic Rules">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body"> 
+                    <h5 class="card-title">Photography Basic Rules</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-2">
+                <div class="col-md-4">
+                  <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="Motion Graphics">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Motion Graphics</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row pb-5">
+         <div class="button text-center pt-4">
+          <a href="#" class="text-center btn btn-primary btn-lg">See More Courses</a>
+         </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
