--- a/index.html
+++ b/index.html
@@ -251,6 +251,44 @@
         </div>
       </div>
     </section>
+
+    <!-- Exploring -->
+    <section id="exploring" class="pb-5">
+      <div class="container">
+        <div class="row g-0">
+          <div class="col-lg-5">
+            <img class="w-100 img-fluid" src="images/working.png" alt="Exploring">
+          </div>
+          <div class="col-lg-7 px-5 bg-success d-flex align-items-center justify-content-center" style="  --bs-bg-opacity: .1;
+">
+            <div class="exploring-info">
+              <h3 class="fw-semibold fs-1 me-5 lh-base">Explore The elearning Institute</h3>
+              <p class="text-muted lh-lg">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
+              Lorem Ipsum, you need to be sure.
+              
+              Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat
+              predefined.</p>
+              <div class="exploring-ratings d-flex gap-4 mb-4">
+                <div class="ratings-item">
+                  <h4>3.2K+</h4>
+                  <small class="text-muted">Online Course</small>
+                </div>
+                <div class="ratings-item">
+                  <h4>600+</h4>
+                  <small class="text-muted">Expert member</small>
+                </div>
+                <div class="ratings-item">
+                  <h4>1k+</h4>
+                  <small class="text-muted">Rating & Review</small>
+                </div>
+              </div>
+              <a href="#" class="btn btn-primary btn-lg">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
