--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
         <div class="row">
           <div class="common-heading text-center py-5">
             <h2 class="fw-semibold">Discover Our Popular Courses</h2>
-            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-            layout.</p>
+            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the
+              readable content of a page when looking at its
+              layout.</p>
           </div>
         </div>
         <div class="row">
@@ -156,7 +157,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -172,7 +174,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Javascript Basic to advanced</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -188,7 +191,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Fullstack Web Development</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -204,7 +208,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Digital Marketing</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -218,9 +223,10 @@
                   <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="Photography Basic Rules">
                 </div>
                 <div class="col-md-8">
-                  <div class="card-body"> 
+                  <div class="card-body">
                     <h5 class="card-title">Photography Basic Rules</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -236,7 +242,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Motion Graphics</h5>
-                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text text-muted">Some quick example text to build on the card title and make up the
+                      bulk of the card.</p>
                     <p class="card-text"><small class="text-primary fw-semibold fs-5">Price : 20$</small></p>
                   </div>
                 </div>
@@ -245,9 +252,9 @@
           </div>
         </div>
         <div class="row pb-5">
-         <div class="button text-center pt-4">
-          <a href="#" class="text-center btn btn-primary btn-lg">See More Courses</a>
-         </div>
+          <div class="button text-center pt-4">
+            <a href="#" class="text-center btn btn-primary btn-lg">See More Courses</a>
+          </div>
         </div>
       </div>
     </section>
@@ -263,28 +270,47 @@
 ">
             <div class="exploring-info">
               <h3 class="fw-semibold fs-1 me-5 lh-base">Explore The elearning Institute</h3>
-              <p class="text-muted lh-lg">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-              by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
-              Lorem Ipsum, you need to be sure.
-              
-              Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat
-              predefined.</p>
+              <p class="text-muted lh-lg">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form,
+                by injected humour, or randomised words which don't look even slightly believable. If you are going to
+                use a passage of
+                Lorem Ipsum, you need to be sure.
+
+                Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend
+                to repeat
+                predefined.</p>
               <div class="exploring-ratings d-flex gap-4 mb-4">
                 <div class="ratings-item">
-                  <h4>3.2K+</h4>
+                  <h4 class="fw-semibold">3.2K+</h4>
                   <small class="text-muted">Online Course</small>
                 </div>
                 <div class="ratings-item">
-                  <h4>600+</h4>
+                  <h4 class="fw-semibold">600+</h4>
                   <small class="text-muted">Expert member</small>
                 </div>
                 <div class="ratings-item">
-                  <h4>1k+</h4>
+                  <h4 class="fw-semibold">1k+</h4>
                   <small class="text-muted">Rating & Review</small>
                 </div>
               </div>
               <a href="#" class="btn btn-primary btn-lg">Read More</a>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Join Section -->
+    <section id="join">
+      <div class="container">
+        <div class="row bg-primary text-white p-5">
+          <div class="col-lg-8">
+              <h2>Ready to join?</h2>
+              <p class="w-75 m-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+              layout.</p>
+          </div>
+          <div class="col-lg-4 d-flex align-items-center justify-content-end">
+            <a href="#" class="btn btn-outline-light">Register Now</a>
           </div>
         </div>
       </div>
