--- a/index.html
+++ b/index.html
@@ -303,18 +303,49 @@
     <!-- Join Section -->
     <section id="join">
       <div class="container">
-        <div class="row bg-primary text-white p-5">
+        <div class="row bg-primary text-white p-5 rounded-3 mb-5">
           <div class="col-lg-8">
               <h2>Ready to join?</h2>
               <p class="w-75 m-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
               layout.</p>
           </div>
           <div class="col-lg-4 d-flex align-items-center justify-content-end">
-            <a href="#" class="btn btn-outline-light">Register Now</a>
+            <button class="btn btn-outline-light btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
           </div>
         </div>
       </div>
     </section>
+    
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="recipient-name" class="col-form-label">Full Name:</label>
+                <input type="text" class="form-control" id="recipient-name">
+              </div>
+              <div class="mb-3">
+                <label for="recipient-email" class="col-form-label">Email:</label>
+                <input type="email" class="form-control" id="recipient-email">
+              </div>
+              <div class="mb-3">
+                <label for="recipient-password" class="col-form-label">Password:</label>
+                <input type="password" class="form-control" id="recipient-password">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Register Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
