--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="container">
         <div class="row">
           <div class="common-heading text-center py-5">
-            <h2 class="fw-semibold">Discover Our Popular Courses</h2>
+            <h2 class="fw-semibold fs-1">Discover Our Popular Courses</h2>
             <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the
               readable content of a page when looking at its
               layout.</p>
@@ -314,38 +314,96 @@
           </div>
         </div>
       </div>
-    </section>
-    
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="recipient-name" class="col-form-label">Full Name:</label>
-                <input type="text" class="form-control" id="recipient-name">
-              </div>
-              <div class="mb-3">
-                <label for="recipient-email" class="col-form-label">Email:</label>
-                <input type="email" class="form-control" id="recipient-email">
-              </div>
-              <div class="mb-3">
-                <label for="recipient-password" class="col-form-label">Password:</label>
-                <input type="password" class="form-control" id="recipient-password">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Register Now</button>
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                  <label for="recipient-name" class="col-form-label">Full Name:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="mb-3">
+                  <label for="recipient-email" class="col-form-label">Email:</label>
+                  <input type="email" class="form-control" id="recipient-email">
+                </div>
+                <div class="mb-3">
+                  <label for="recipient-password" class="col-form-label">Password:</label>
+                  <input type="password" class="form-control" id="recipient-password">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Register Now</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+
+      <!-- Team Section -->
+      <section id="team">
+        <div class="container">
+          <div class="row">
+            <div class="common-heading w-50 py-5 pe-5">
+              <h2 class="fw-semibold fs-1">Discover Our Popular Courses</h2>
+              <p class="text-muted">It is a long established fact that a reader will be distracted by the
+                readable content of a page when looking at its
+                layout.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="card">
+                <img src="images/student/student-1.png" class="card-img-top" alt="Student">
+                <div class="card-body">
+                  <h5 class="card-title">Awlad Hossain</h5>
+                  <p class="card-text text-muted">UIUX Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="card">
+                <img src="images/student/student-2.png" class="card-img-top" alt="Student">
+                <div class="card-body">
+                  <h5 class="card-title">Jannatul Islam</h5>
+                  <p class="card-text text-muted">Motion Design</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="card">
+                <img src="images/student/student-3.png" class="card-img-top" alt="Student">
+                <div class="card-body">
+                  <h5 class="card-title">Imran Hossain</h5>
+                  <p class="card-text text-muted">Graphic Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="card">
+                <img src="images/student/student-4.png" class="card-img-top" alt="Student">
+                <div class="card-body">
+                  <h5 class="card-title">Nishi Akter</h5>
+                  <p class="card-text text-muted">Web Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row pb-5">
+            <div class="button text-center pt-4">
+              <a href="#" class="text-center btn btn-primary btn-lg">View All</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
