--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
+  <!-- Font Awesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
   <!-- Link CSS -->
@@ -345,63 +347,177 @@
           </div>
         </div>
       </div>
+    </section>
 
-      <!-- Team Section -->
-      <section id="team">
-        <div class="container">
-          <div class="row">
-            <div class="common-heading w-50 py-5 pe-5">
-              <h2 class="fw-semibold fs-1">Discover Our Popular Courses</h2>
-              <p class="text-muted">It is a long established fact that a reader will be distracted by the
-                readable content of a page when looking at its
-                layout.</p>
-            </div>
+    <!-- Team Section -->
+    <section id="team">
+      <div class="container">
+        <div class="row">
+          <div class="common-heading w-50 py-5 pe-5">
+            <h2 class="fw-semibold fs-1">Discover Our Popular Courses</h2>
+            <p class="text-muted">It is a long established fact that a reader will be distracted by the
+              readable content of a page when looking at its
+              layout.</p>
           </div>
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="card">
-                <img src="images/student/student-1.png" class="card-img-top" alt="Student">
-                <div class="card-body">
-                  <h5 class="card-title">Awlad Hossain</h5>
-                  <p class="card-text text-muted">UIUX Designer</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="card">
-                <img src="images/student/student-2.png" class="card-img-top" alt="Student">
-                <div class="card-body">
-                  <h5 class="card-title">Jannatul Islam</h5>
-                  <p class="card-text text-muted">Motion Design</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="card">
-                <img src="images/student/student-3.png" class="card-img-top" alt="Student">
-                <div class="card-body">
-                  <h5 class="card-title">Imran Hossain</h5>
-                  <p class="card-text text-muted">Graphic Designer</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="card">
-                <img src="images/student/student-4.png" class="card-img-top" alt="Student">
-                <div class="card-body">
-                  <h5 class="card-title">Nishi Akter</h5>
-                  <p class="card-text text-muted">Web Developer</p>
-                </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="images/student/student-1.png" class="card-img-top" alt="Student">
+              <div class="card-body">
+                <h5 class="card-title">Awlad Hossain</h5>
+                <p class="card-text text-muted">UIUX Designer</p>
               </div>
             </div>
           </div>
-          <div class="row pb-5">
-            <div class="button text-center pt-4">
-              <a href="#" class="text-center btn btn-primary btn-lg">View All</a>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="images/student/student-2.png" class="card-img-top" alt="Student">
+              <div class="card-body">
+                <h5 class="card-title">Jannatul Islam</h5>
+                <p class="card-text text-muted">Motion Design</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="images/student/student-3.png" class="card-img-top" alt="Student">
+              <div class="card-body">
+                <h5 class="card-title">Imran Hossain</h5>
+                <p class="card-text text-muted">Graphic Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="images/student/student-4.png" class="card-img-top" alt="Student">
+              <div class="card-body">
+                <h5 class="card-title">Nishi Akter</h5>
+                <p class="card-text text-muted">Web Developer</p>
+              </div>
             </div>
           </div>
         </div>
-      </section>
+        <div class="row pb-5">
+          <div class="button text-center pt-4">
+            <a href="#" class="text-center btn btn-primary btn-lg">View All</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Feedback -->
+    <section id="feedback">
+      <div class="container">
+        <div class="row">
+          <div class="common-heading py-5 pe-5 text-center">
+            <h2 class="fw-semibold fs-1">Some Students Feedback</h2>
+            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+        </div>
+        <div class="row pb-5">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row gap-4 justify-content-between">
+                  <div class="col-lg-6 p-5 border">
+                    <div class="img-ratings d-flex justify-content-between align-items-center">
+                      <img class="img-fluid mb-2" src="images/comma.png" alt="''">
+                      <div class="ratings">
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-secondary"></i>
+                      </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex gap-3 align-items-center">
+                      <img class="img-fluid" src="images/student/student-5.png" alt="Student">
+                      <div class="author-info">
+                        <h5 class="m-0">Awlad Hossain</h5>
+                        <p class="text-muted m-0">UI Designer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 p-5 border">
+                    <div class="img-ratings d-flex justify-content-between align-items-center">
+                      <img class="img-fluid mb-2" src="images/comma.png" alt="''">
+                      <div class="ratings">
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-secondary"></i>
+                      </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex gap-3 align-items-center">
+                      <img class="img-fluid" src="images/student/student-6.png" alt="Student">
+                      <div class="author-info">
+                        <h5 class="m-0">Shanta Akter</h5>
+                        <p class="text-muted m-0">Graphic Designer</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row gap-4 justify-content-between">
+                  <div class="col-lg-6 p-5 border">
+                    <div class="img-ratings d-flex justify-content-between align-items-center">
+                      <img class="img-fluid mb-2" src="images/comma.png" alt="''">
+                      <div class="ratings">
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-secondary"></i>
+                      </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex gap-3 align-items-center">
+                      <img class="img-fluid" src="images/student/student-5.png" alt="Student">
+                      <div class="author-info">
+                        <h5 class="m-0">Awlad Hossain</h5>
+                        <p class="text-muted m-0">UI Designer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 p-5 border">
+                    <div class="img-ratings d-flex justify-content-between align-items-center">
+                      <img class="img-fluid mb-2" src="images/comma.png" alt="''">
+                      <div class="ratings">
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-warning"></i>
+                        <i class="fa-solid fa-star text-secondary"></i>
+                      </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex gap-3 align-items-center">
+                      <img class="img-fluid" src="images/student/student-6.png" alt="Student">
+                      <div class="author-info">
+                        <h5 class="m-0">Shanta Akter</h5>
+                        <p class="text-muted m-0">Graphic Designer</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon bg-primary rounded-circle" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon bg-primary rounded-circle" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
     
   </main>
