--- a/index.html
+++ b/index.html
@@ -307,12 +307,14 @@
       <div class="container">
         <div class="row bg-primary text-white p-5 rounded-3 mb-5">
           <div class="col-lg-8">
-              <h2>Ready to join?</h2>
-              <p class="w-75 m-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+            <h2>Ready to join?</h2>
+            <p class="w-75 m-0">It is a long established fact that a reader will be distracted by the readable content
+              of a page when looking at its
               layout.</p>
           </div>
           <div class="col-lg-4 d-flex align-items-center justify-content-end">
-            <button class="btn btn-outline-light btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
+            <button class="btn btn-outline-light btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">Register
+              Now</button>
           </div>
         </div>
       </div>
@@ -412,7 +414,8 @@
         <div class="row">
           <div class="common-heading py-5 pe-5 text-center">
             <h2 class="fw-semibold fs-1">Some Students Feedback</h2>
-            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the
+              readable content of a page when looking at its layout.</p>
           </div>
         </div>
         <div class="row pb-5">
@@ -431,7 +434,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                      alteration in some form, by injected humour, or randomised words which don't look even slightly
+                      believable. If you are going to use a passage of Lorem.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-5.png" alt="Student">
                       <div class="author-info">
@@ -451,7 +456,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                      alteration in some form, by injected humour, or randomised words which don't look even slightly
+                      believable. If you are going to use a passage of Lorem.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-6.png" alt="Student">
                       <div class="author-info">
@@ -475,7 +482,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                      alteration in some form, by injected humour, or randomised words which don't look even slightly
+                      believable. If you are going to use a passage of Lorem.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-5.png" alt="Student">
                       <div class="author-info">
@@ -495,7 +504,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                      alteration in some form, by injected humour, or randomised words which don't look even slightly
+                      believable. If you are going to use a passage of Lorem.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-6.png" alt="Student">
                       <div class="author-info">
@@ -507,11 +518,13 @@
                 </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon bg-primary rounded-circle" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon bg-primary rounded-circle" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -519,7 +532,93 @@
         </div>
       </div>
     </section>
-    
+
+    <!-- Faq -->
+    <section id="faq">
+      <div class="container">
+        <div class="row">
+          <div class="common-heading py-5 pe-5 text-center">
+            <h2 class="fw-semibold fs-1">Frequently Asked Questions</h2>
+            <p class="text-muted w-50 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+        </div>
+        <div class="row pb-5">
+          <div class="col-lg-8 mx-auto">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    What are the difference between flexbox and grid
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one
+                    dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                    The two specifications share some common features, however, and if you have already learned how to use flexbox, the
+                    similarities should help you get to grips with Grid.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                    aria-expanded="false" aria-controls="collapseTwo">
+                    What are the difference between tailwind css bootstrap
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web. On the other hand, Tailwind CSS is detailed as "A utility-first CSS framework for rapid UI development".
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                    aria-expanded="false" aria-controls="collapseThree">
+                    What is CSS box model
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>In CSS, the term "box model" is used when talking about design and layout.</p>
+                    <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding,
+                    and the actual content. The image below illustrates the box model:</p>
+                    Explanation of the different parts:
+                    <ul>
+                      <li><strong>Content</strong> - The content of the box, where text and images appear</li>
+                      <li><strong>Padding</strong> - Clears an area around the content. The padding is transparent</li>
+                      <li><strong>Border</strong> - A border that goes around the padding and content</li>
+                      <li><strong>Margin</strong> - Clears an area outside the border. The margin is transparent</li>
+                    </ul>
+                    The box model allows us to add a border around elements, and to define space between elements.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collspanFour"
+                    aria-expanded="false" aria-controls="collspanFour">
+                    What is semantic tag
+                  </button>
+                </h2>
+                <div id="collspanFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    The core characteristic of a semantic element is that it clearly communicated its meaning to both the developer and the browser. These elements clearly define its content. 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
