--- a/index.html
+++ b/index.html
@@ -619,6 +619,25 @@
         </div>
       </div>
     </section>
+
+    <!-- Companies -->
+    <section id="companies">
+      <div class="container">
+        <div class="row">
+          <div class="common-heading py-5 pe-5 text-center">
+            <h2 class="fw-semibold fs-1">Trusted by over 800+ companies</h2>
+          </div>
+        </div>
+        <div class="row pb-5">
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-1.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-2.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-3.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-4.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-5.png" alt="Company"></a></div>
+          <div class="col-lg-2"><a href="#"><img src="images/company/company-6.png" alt="Company"></a></div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src=" 	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
