--- a/index.html
+++ b/index.html
@@ -272,15 +272,13 @@
           <div class="col-lg-7 px-5 bg-success d-flex align-items-center justify-content-center" style="  --bs-bg-opacity: .1; ">
             <div class="exploring-info">
               <h3 class="fw-semibold fs-1 me-5 lh-base">Explore The elearning Institute</h3>
-              <p class="text-muted lh-lg">There are many variations of passages of Lorem Ipsum available, but the
-                majority have suffered alteration in some form,
-                by injected humour, or randomised words which don't look even slightly believable. If you are going to
-                use a passage of
-                Lorem Ipsum, you need to be sure.
-
-                Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend
-                to repeat
-                predefined.</p>
+              <p class="text-muted lh-lg">Explore Your Environment: K-8 Activity Guide offers educators a wide variety of engaging, hands-on activities, organized
+              into grade bands: K-2, 3-5, and 6-8. Many activities also suggest variations for doing the activity with a different
+              grade level or audience.
+              
+              Topics include trees and forests, wildlife, water, air, energy, waste, climate change, invasive species, community
+              planning, and more. The activities encompass the economic, ecological, and social aspects of environmental issues and
+              are designed to help students learn how to think, not what to think.</p>
               <div class="exploring-ratings d-flex gap-4 mb-4">
                 <div class="ratings-item">
                   <h4 class="fw-semibold">3.2K+</h4>
@@ -434,9 +432,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                      alteration in some form, by injected humour, or randomised words which don't look even slightly
-                      believable. If you are going to use a passage of Lorem.</p>
+                    <p>Explore Your Environment: K-8 Activity Guide offers educators a wide variety of engaging, hands-on activities, organized
+                    into grade bands: K-2, 3-5, and 6-8. Many activities also suggest variations for doing the activity with a different
+                    grade level or audience.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-5.png" alt="Student">
                       <div class="author-info">
@@ -456,9 +454,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                      alteration in some form, by injected humour, or randomised words which don't look even slightly
-                      believable. If you are going to use a passage of Lorem.</p>
+                    <p>Explore Your Environment: K-8 Activity Guide offers educators a wide variety of engaging, hands-on activities, organized
+                    into grade bands: K-2, 3-5, and 6-8. Many activities also suggest variations for doing the activity with a different
+                    grade level or audience.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-6.png" alt="Student">
                       <div class="author-info">
@@ -482,9 +480,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                      alteration in some form, by injected humour, or randomised words which don't look even slightly
-                      believable. If you are going to use a passage of Lorem.</p>
+                    <p>Explore Your Environment: K-8 Activity Guide offers educators a wide variety of engaging, hands-on activities, organized
+                    into grade bands: K-2, 3-5, and 6-8. Many activities also suggest variations for doing the activity with a different
+                    grade level or audience.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-5.png" alt="Student">
                       <div class="author-info">
@@ -504,9 +502,9 @@
                         <i class="fa-solid fa-star text-secondary"></i>
                       </div>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                      alteration in some form, by injected humour, or randomised words which don't look even slightly
-                      believable. If you are going to use a passage of Lorem.</p>
+                    <p>Explore Your Environment: K-8 Activity Guide offers educators a wide variety of engaging, hands-on activities, organized
+                    into grade bands: K-2, 3-5, and 6-8. Many activities also suggest variations for doing the activity with a different
+                    grade level or audience.</p>
                     <div class="d-flex gap-3 align-items-center">
                       <img class="img-fluid" src="images/student/student-6.png" alt="Student">
                       <div class="author-info">
